--- a/style.css
+++ b/style.css
@@ -87,15 +87,15 @@ div#first {
 }
 
 div#second {
-  background-color: #CC9275;
+  background-color: #1D0902;
 }
 
 div#third {
-  background-color: #464155;
+  background-color: #1D0902;
 }
 
 div#fourth {
-  background-color: #4B1709;
+  background-color: #1D0902;
 }
 
 div#fifth {
